rust/src/openvasd/api_tests/snapshots/head_endpoints HEAD __scans.snap
---
source: src/openvasd/api_tests/test_builder.rs
expression: inner
---
{
  "status_code": 200,
  "headers": {
    "api-version": "1",
    "authentication": "disabled",
    "content-type": "application/json",
    "date": "[redacted]",
    "feed-version": "[redacted]",
  },
  "body": "",
}
